--- a/src/index.html
+++ b/src/index.html
@@ -19,37 +19,18 @@
 </head>
 
 <body>
-  <div class="column">
-    <h1 data-type="copy"></h1>
-    <button data-type="lock">
-      <i class="fa-solid fa-lock-open" data-type="lock"></i>
-    </button>
+  <div class="amount_menu">
+    <button class="add_color" data-type="menu">+</button>
   </div>
-  <div class="column">
-    <h1 data-type="copy"></h1>
-    <button data-type="lock">
-      <i class="fa-solid fa-lock-open" data-type="lock"></i>
-    </button>
-  </div>
-  <div class="column">
-    <h1 data-type="copy"></h1>
-    <button data-type="lock">
-      <i class="fa-solid fa-lock-open" data-type="lock"></i>
-    </button>
-  </div>
-  <div class="column">
-    <h1 data-type="copy"></h1>
-    <button data-type="lock">
-      <i class="fa-solid fa-lock-open" data-type="lock"></i>
-    </button>
-  </div>
-  <div class="column">
-    <h1 data-type="copy"></h1>
-    <button data-type="lock">
-      <i class="fa-solid fa-lock-open" data-type="lock"></i>
-    </button>
-  </div>
+    <div class="column">
+      <h1 data-type="copy"></h1>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
+    </div>
 
+
+  <script src="./adder.js"></script>
   <script src="./app.js"></script>
 </body>
 
