feat: add delete btn and styles

--- a/src/index.html
+++ b/src/index.html
@@ -19,18 +19,27 @@
 </head>
 
 <body>
-  <div class="amount_menu">
-    <button class="add_color" data-type="menu">+</button>
+  <div class="amount_menu" data-type="add">
+    <div class="post-4" data-type="add">
+      <button class="add_color">
+        <i class="fa-sharp fa-solid fa-circle-plus" data-type="add"></i>
+      </button>
+    </div>
   </div>
-    <div class="column">
-      <h1 data-type="copy"></h1>
+  <div class="column">
+    <h1 data-type="copy"></h1>
+    <div class="use_btn">
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
       </button>
+      <button data-type="trash">
+        <i class="fa-solid fa-trash-can" data-type="trash"></i>
+      </button>
     </div>
-
+  </div>
 
   <script src="./adder.js"></script>
+  <script src="./remover.js"></script>
   <script src="./app.js"></script>
 </body>
 
