feat: add info about the space function

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
       </button>
     </div>
   </div>
+  <div class="info">
+    <p>press the <span>space</span></p>
+  </div>
 
   <script src="./adder.js"></script>
   <script src="./remover.js"></script>
