feat: add zero level and style for button add

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   </div>
   <div class="column">
     <h1 data-type="copy"></h1>
+    <!-- <input type="text" n data-type="title_hex" value="Type here"> -->
     <div class="use_btn">
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
@@ -41,6 +42,7 @@
     <p>press the <span>space</span></p>
   </div>
 
+  <script src="./zeroLevel.js"></script>
   <script src="./adder.js"></script>
   <script src="./remover.js"></script>
   <script src="./app.js"></script>
