feat: add zero level and style for button add (#4)
* feat: add zero level and style for button add

* fix: comment

* fix: comment remover file

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
     <p>press the <span>space</span></p>
   </div>
 
+  <script src="./zeroLevel.js"></script>
   <script src="./adder.js"></script>
   <script src="./remover.js"></script>
   <script src="./app.js"></script>
